improved the file structure

--- a/index.html
+++ b/index.html
@@ -249,7 +249,7 @@
 							</div>
 						</div>
 						<div class="inner-contents">
-							<img src="../dist/img/lunch-menu.png" alt="Food" />
+							<img src="img/lunch-menu.png" alt="Food" />
 							<div class="menu-content">
 								<div class="d-flex">
 									<h3 class="food p-left">Salad</h3>
@@ -367,7 +367,7 @@
 				<div id="tab-4-content" class="tab-content-item">
 					<div class="tab-4-content-inner d-grid">
 						<div class="inner-contents">
-							<img src="../dist/img/drinks-menu.png" alt="Food" />
+							<img src="img/drinks-menu.png" alt="Food" />
 							<div class="menu-content">
 								<div class="d-flex">
 									<h3 class="food p-left">Cocktail</h3>
@@ -379,7 +379,7 @@
 							</div>
 						</div>
 						<div class="inner-contents">
-							<img src="../dist/img/drinks-menu.png" alt="Food" />
+							<img src="img/drinks-menu.png" alt="Food" />
 							<div class="menu-content">
 								<div class="d-flex">
 									<h3 class="food p-left">Cocktail</h3>
@@ -391,7 +391,7 @@
 							</div>
 						</div>
 						<div class="inner-contents">
-							<img src="../dist/img/drinks-menu.png" alt="Food" />
+							<img src="img/drinks-menu.png" alt="Food" />
 							<div class="menu-content">
 								<div class="d-flex">
 									<h3 class="food p-left">Cocktail</h3>
@@ -449,7 +449,7 @@
 				<div class="newsletter-content">
 					<h3 class="news-header">Sign Up to our Newsletter</h3>
 					<p class="news-description">
-						Recieve weekly updates on the hottest food topics by signing up
+						Receive weekly updates on the hottest food topics by signing up
 					</p>
 					<form action="post">
 						<input type="email" placeholder="Enter your Email Address" />
